# MayMemCached2

./: .gitmodules  README.md
MayCached/: .gitignore  CMakeLists.txt
MayCached/connection/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
MayCached/connection/include/connection/: IServer.hpp  ServerFactory.hpp
MayCached/connection/src/: ClientSession.cpp  ClientSession.hpp  Server.cpp  Server.hpp  ServerFactory.cpp
MayCached/engine/: CMakeLists.txt
MayCached/engine/include/engine/: IRequestController.hpp  IResponse.hpp  RequestControllerFactory.hpp
MayCached/engine/src/: ICommandBuilder.hpp  IRequestParser.hpp  RequestController.cpp  RequestController.hpp  RequestControllerFactory.cpp  RequestParser.cpp  RequestParser.hpp  RuleSet.hpp  StupidResponse.cpp  StupidResponse.hpp
MayCached/engine/src/SimpleProto/: ILexemeParser.hpp  LexemeParser.cpp  LexemeParser.hpp  SimpleCommandBuilder.cpp  SimpleCommandBuilder.hpp  SimpleRequestParser.cpp  SimpleRequestParser.hpp
MayCached/engine/src/SimpleProto/Representations/: SimpleEchoRepresentation.cpp  SimpleEchoRepresentation.hpp  SimpleGetRepresentation.cpp  SimpleGetRepresentation.hpp  SimpleStatusRepresentation.cpp  SimpleStatusRepresentation.hpp
MayCached/engine/test/: CMakeLists.txt  TestLauncher.cpp
MayCached/engine/test/SimpleProto/: LexemeParser_test.hpp
MayCached/logic/: CMakeLists.txt
MayCached/logic/include/logic/: IHandler.hpp  ILogicController.hpp  LogicControllerFactory.hpp
MayCached/logic/include/logic/Answers/: EchoAnswer.hpp  GetAnswer.hpp  StatusAnswer.hpp  VersionAnswer.hpp
MayCached/logic/include/logic/Commands/: DeleteCommand.cpp  DeleteCommand.hpp  EchoCommand.cpp  EchoCommand.hpp  GetCommand.cpp  GetCommand.hpp  ICommand.hpp  SetCommand.cpp  SetCommand.hpp  StopCommand.hpp  VersionCommand.cpp  VersionCommand.hpp
MayCached/logic/include/logic/Representations/: IEchoRepresentation.hpp  IGetRepresentation.hpp  IRepresentation.hpp  IStatusRepresentation.hpp  IVersionRepresentation.hpp
MayCached/logic/src/: Data.hpp  IStorage.hpp  ITimeExpirationManager.hpp  LogicController.cpp  LogicController.hpp  LogicControllerFactory.cpp  Storage.cpp  Storage.hpp  StupidHandler.cpp  StupidHandler.hpp  TimeExpirationCore.cpp  TimeExpirationCore.hpp  TimeExpirationManager.cpp  TimeExpirationManager.hpp  data.cpp  itimeexpirationmanager.hpp
MayCached/logic/src/Database/: DataMarshallerFileHandler.cpp  DataMarshallerFileHandler.hpp  DataMarshallerRawBinary.cpp  DataMarshallerRawBinary.hpp  DatabaseManager.cpp  DatabaseManager.hpp  DatabaseManagerIndexes.cpp  DatabaseManagerIndexes.hpp  IDataMarshaller.hpp  IDatabaseManager.hpp  IInMemorySerializationStrategy.hpp  InMemorySerializationStrategy.cpp  InMemorySerializationStrategy.hpp
MayCached/logic/src/Handlers/: DeleteHandler.cpp  DeleteHandler.hpp  GetHandler.cpp  GetHandler.hpp  SetHandler.cpp  SetHandler.hpp  ShutdownHandler.cpp  ShutdownHandler.hpp  StupidHandler.cpp  StupidHandler.hpp  VersionHandler.cpp  VersionHandler.hpp
MayCached/logic/src/Storages/: IStorage.hpp  StorageInMemory.cpp  StorageInMemory.hpp
MayCached/logic/test/: CMakeLists.txt  DatabaseMarshallerTest.hpp  InMemorySerializationStrategyTest.hpp  TestLauncher.cpp  TimeExpirationCoreTest.hpp  TimeExpirationManagerTest.hpp
MayCached/mainapp/: CMakeLists.txt  main.cpp
MayCached/mainapp/SUSD/: SUSDManager.cpp  SUSDManager.hpp
MayCached/system/: CMakeLists.txt
MayCached/system/include/system/: IComponent.hpp  IMainappStopper.hpp  IThreadPool.hpp
MayCached/system/src/: ThreadPool.cpp  ThreadPool.hpp
MayCached/toolset/: CMakeLists.txt
